<resources>
    <string name="app_name">Firebase</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign Out</string>
    <string name="action_delete_account">Delete Account</string>
    <string name="title_activity_signed_in">Home</string>
    <string name="action_save">Save</string>
    <string name="product_label">Name:</string>
    <string name="quantity_label">Quantity:</string>
    <string name="hint_name">product name</string>
    <string name="hint_quantity">quantity</string>
    <string name="dialog_message">Add a New Product</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="label_products">Products</string>
</resources>
